--- a/Home.html
+++ b/Home.html
@@ -60,7 +60,7 @@
                     </a>
                 </li>
                 <li class="separacion_reg_ini">
-                    <a href="Inicion_sesion.html" class=" color_letra2">
+                    <a href="inicio_sesion.html" class=" color_letra2">
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                             class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
                             <path fill-rule="evenodd"
