--- a/Registrarse.html
+++ b/Registrarse.html
@@ -46,16 +46,16 @@
             <div class="col-md-3">
             </div>
             <div class="col-md-6" style="background-color: white; border: black solid 1px;">
-                <!--Icono de Inicio de Sesion-->
+                <!--Icono Registrarse-->
+                <br>
                 <svg xmlns="http://www.w3.org/2000/svg" width="70" height="70" fill="currentColor"
-                    class="bi bi-person-circle " viewBox="0 0 16 16" style="margin-top: 5%; margin-bottom: 2%;">
-                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                    class="bi bi-person-plus-fill texto_registro" viewBox="0 0 16 16 ">
+                    <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
                     <path fill-rule="evenodd"
-                        d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+                        d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z" />
                 </svg>
                 <!--Texto-->
-                <p class="texto_is">Crea una cuenta para poder realizar compras, obtener ofertas y participar de futuros
-                    sorteos que realice la página</p>
+                <h5 class="texto_registro" style="margin-bottom: 0; padding-bottom: 20px;"> Ingresa los Datos para Crear una Cuenta</h5>
                 <form action="#" method="POST" name="inicio_sesion">
                     <!--Ingresar Correo Electronico-->
                     <div class="form-group">
