Avance formularios listos

--- a/inicio_sesion.html
+++ b/inicio_sesion.html
@@ -17,6 +17,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <!--Importe de los estilos(css)-->
     <link type="text/css" rel="stylesheet" href="Css/estilos.css">
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $("#error_is").hide(); //ocultando el div de los errores
+
+            //Indicar que las validaciones del formulario se ejecutaran solo cuando se
+            //presione el submit
+            $("#inicio_sesion").submit(function () {
+                var mensaje = "Por favor revisar los siguientes detalles en el formulario: ";
+
+                if ($("#email").val().trim().length == 0) {
+                    mensaje = mensaje + "<br>El correo electrónico no debe estar vacío";
+                }
+                if ($("#contrasenia").val().trim().length == 0) {
+                    mensaje = mensaje + "<br>La contraseña no debe estar vacía";
+                }
+                if (mensaje != "Por favor revisar los siguientes detalles en el formulario: ") {
+                    $("#error_is").html(mensaje); //mostrando el texto de la variable en el div del html
+                    $("#error_is").show(); //hace visible el div
+                    event.preventDefault(); //evita que los datos del formulario se envie
+                }
+            });
+        });
+    </script>
 </head>
 
 <body>
@@ -45,7 +69,7 @@
         <div class="row">
             <div class="col-md-3">
             </div>
-            <div class="col-md-6" style="background-color: white; border: black solid 1px;">
+            <div class="col-md-6 texto_is" style="background-color: white; border: black solid 1px;">
                 <!--Icono de Inicio de Sesion-->
                 <svg xmlns="http://www.w3.org/2000/svg" width="70" height="70" fill="currentColor"
                     class="bi bi-person-circle " viewBox="0 0 16 16" style="margin-top: 5%; margin-bottom: 2%;">
@@ -54,16 +78,18 @@
                         d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
                 </svg>
                 <!--Texto-->
-                <p class="texto_is">Crea una cuenta para poder realizar compras, obtener ofertas y participar de futuros
+                <p class="texto_is" style="margin-bottom: 30px;">Inicia sesión para poder realizar compras, obtener ofertas y participar de futuros
                     sorteos que realice la página</p>
-                <form action="#" method="POST" name="inicio_sesion">
+                <form action="#" method="POST" name="inicio_sesion" id="inicio_sesion">
                     <!--Ingresar Correo Electronico-->
                     <div class="form-group">
-                        <input type="email" class="form-control" placeholder="Correo electronico" required>
+                        <input type="email" class="form-control borde_input" id="email"
+                            placeholder="Correo electrónico"  style="margin-bottom: 30px;">
                     </div>
                     <!--Ingresar Contraseña-->
                     <div class="form-group">
-                        <input type="password" class="form-control" placeholder="Contraseña" required>
+                        <input type="password" class="form-control borde_input" id="contrasenia"
+                            placeholder="Contraseña"  style="margin-bottom: 30px;">
                     </div>
                     <!--Separar recuerdame y ¿olvidaste contraseña?-->
                     <div class="row" style="padding-bottom: 10px;">
@@ -74,12 +100,14 @@
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-12" style="text-align: right;">
-                            <a href="#" class="texto_is" style="margin-bottom: 10px;">¿Olvidaste tu Contraseña?</a>
+                            <a href="olvidaste_clave.html" class="texto_is" style="margin-bottom: 10px;">¿Olvidaste tu
+                                Contraseña?</a>
                         </div>
                     </div>
                     <!--Boton Inicio Sesion-->
                     <div class="form-group">
-                        <p><button type="submit" class="boton_is">Iniciar Sesión</button></p>
+                        <div id="error_is" class="alert alert-danger" style="text-align: left;"></div>
+                        <p><button type="submit" class="boton_is" style="margin-top: 30px;">Iniciar Sesión</button></p>
                     </div>
                     <div class="form-group">
                         <p class="texto_is">———————————————— O ————————————————</p>
