--- a/Registrarse.html
+++ b/Registrarse.html
@@ -17,6 +17,51 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <!--Importe de los estilos(css)-->
     <link type="text/css" rel="stylesheet" href="Css/estilos.css">
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $("#error").hide(); //ocultando el div de los errores
+            //$("#block").hide();
+            //$("#num_depto").hide();
+            //$("#block1").hide();
+            //$("#num_depto1").hide();
+
+            //Indicar que las validaciones del formulario se ejecutaran solo cuando se
+            //presione el submit
+            $("#registrarse").submit(function () {
+                var mensaje = "Por favor revisar los siguientes detalles en el formulario: ";
+                var viv = $("#tipo_vivienda").val();
+                if ($("#nombre").val().trim().length == 0) {
+                    mensaje = mensaje + "<br>El nombre no debe estar vacío";
+                }
+                if ($("#apellido").val().trim().length == 0) {
+                    mensaje = mensaje + "<br>El apellido no debe estar vacío";
+                }
+                if ($("#email").val().trim().length == 0) {
+                    mensaje = mensaje + "<br>El correo electrónico no debe estar vacío";
+                }
+                if (isNaN($("#telefono").val())) {
+                    mensaje = mensaje + "<br>El teléfono solo puede ser números";
+                } if ($("#telefono").val().trim().length == 0) {
+                    mensaje = mensaje + "<br>El teléfono no debe estar vacío";
+                }
+                if ($("#contrasenia").val() != $("#contrasenia2").val()) {
+                    mensaje = mensaje + "<br>Las contraseñas deben ser iguales";
+                }
+                if ($("#direccion").val().trim().length == 0) {
+                    mensaje = mensaje + "<br>La dirección no debe estar vacío";
+                }
+                if ($("#direccion_num").val().trim().length == 0) {
+                    mensaje = mensaje + "<br>El numero de la direccion no debe estar vacío";
+                }
+                if (mensaje != "Por favor revisar los siguientes detalles en el formulario: ") {
+                    $("#error").html(mensaje); //mostrando el texto de la variable en el div del html
+                    $("#error").show(); //hace visible el div
+                    event.preventDefault(); //evita que los datos del formulario se envie
+                }
+            });
+        });
+    </script>
 </head>
 
 <body>
@@ -41,49 +86,124 @@
     </nav>
     <!--Fin Barra Menu-->
 
-    <div class="container texto_is" style="text-align: center;">
+    <div class="container">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-2">
             </div>
-            <div class="col-md-6" style="background-color: white; border: black solid 1px;">
+            <div class="col-md-8" style="background-color: white; border: black solid 1px;">
                 <!--Icono Registrarse-->
                 <br>
-                <svg xmlns="http://www.w3.org/2000/svg" width="70" height="70" fill="currentColor"
-                    class="bi bi-person-plus-fill texto_registro" viewBox="0 0 16 16 ">
-                    <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
-                    <path fill-rule="evenodd"
-                        d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z" />
-                </svg>
+                <div style="text-align: center;">
+                    <svg mlns="http://www.w3.org/2000/svg" width="70" height="70" fill="currentColor"
+                        class="bi bi-person-plus-fill texto_registro" viewBox="0 0 16 16">
+                        <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
+                        <path fill-rule="evenodd"
+                            d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z" />
+                    </svg>
+                </div>
                 <!--Texto-->
-                <h5 class="texto_registro" style="margin-bottom: 0; padding-bottom: 20px;"> Ingresa los Datos para Crear una Cuenta</h5>
-                <form action="#" method="POST" name="inicio_sesion">
-                    <!--Ingresar Correo Electronico-->
-                    <div class="form-group">
-                        <input type="email" class="form-control" placeholder="Correo electronico" required>
-                    </div>
-                    <!--Ingresar Contraseña-->
-                    <div class="form-group">
-                        <input type="password" class="form-control" placeholder="Contraseña" required>
-                    </div>
-                    <!--Separar recuerdame y ¿olvidaste contraseña?-->
-                    <div class="row" style="padding-bottom: 10px;">
-                        <div class="col-md-6 col-sm-12" style="padding-left: 30px; text-align: left;">
-                            <div class="form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">Recuerdame</label>
+                <h5 style="margin-bottom: 0; padding-bottom: 20px; text-align: center;"> Ingresa los Datos para Crear
+                    una Cuenta</h5>
+                <form action="#" method="POST" name="registrarse" id="registrarse">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <!--Ingresar Nombre-->
+                            <div class="form-group">
+                                <label class="texto_datos" for="nombre">Nombre</label>
+                                <input type="text" class="form-control borde_input" name="nombre" id="nombre"
+                                    placeholder="Nombre">
+                            </div>
+                            <!--Ingresar Apellido-->
+                            <div class="form-group">
+                                <label class="texto_datos" for="apellido">Apellido</label>
+                                <input type="text" class="form-control borde_input" name="apellido" id="apellido"
+                                    placeholder="Apellido">
+                            </div>
+                            <!--Ingresar Correo Electrónico-->
+                            <div class="form-group">
+                                <label class="texto_datos" for="email">Correo Electrónico</label>
+                                <input type="email" class="form-control borde_input" name="email" id="email"
+                                    placeholder="alguien@ejemplo.com">
+                            </div>
+                            <!--Ingresar Contraseña-->
+                            <div class="form-group">
+                                <label class="texto_datos" for="contrasenia">Contraseña</label>
+                                <input type="password" class="form-control borde_input" name="contrasenia"
+                                    id="contrasenia">
+                            </div>
+                            <!--Ingresar Confirmar Contraseña-->
+                            <div class="form-group">
+                                <label class="texto_datos" for="contrasenia2">Confirmar Contraseña</label>
+                                <input type="password" class="form-control borde_input" name="contrasenia2"
+                                    id="contrasenia2">
+                            </div>
+
+                        </div>
+                        <div class="col-md-6">
+                            <!--Ingresar Telefono-->
+                            <div class="form-group">
+                                <label class="texto_datos" for="telefono">Teléfono</label>
+                                <input type="tel" class="form-control borde_input" name="telefono" id="telefono"
+                                    placeholder="9 1234 5678">
+                            </div>
+                            <!--Ingresar direccion numero-->
+                            <div class="form-group" style="margin-bottom: 0;">
+                                <label class="texto_datos" for="tipo_vivienda" style="margin-top: 5px;">Tipo de
+                                    Vivienda</label>
+                            </div>
+                            <div class="form-group">
+                                <select name="tipo_vivienda" id="tipo_vivienda" style="margin-bottom: 8px;">
+                                    <option value="casa">Casa</option>
+                                    <option value="departamento">Departamento</option>
+                                </select>
+                            </div>
+                            <!--Ingresar direccion-->
+                            <div class="form-group">
+                                <label class="texto_datos" for="direccion">Dirección</label>
+                                <input type="text" class="form-control borde_input" name="direccion" id="direccion"
+                                    placeholder="Psje Ejemplo">
+                            </div>
+                            <!--Ingresar direccion numero-->
+                            <div class="form-group">
+                                <label class="texto_datos" for="direccion_num">Número</label>
+                                <input type="number" class="form-control borde_input" name="direccion_num"
+                                    id="direccion_num" placeholder="1234">
+                            </div>
+
+                            <div class="form-group">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <label class="texto_datos" for="block" id="block1">Block</label>
+                                        <input type="number" class="form-control borde_input" name="block" id="block"
+                                            placeholder="123">
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label class="texto_datos" for="num-depto" id="num_depto1">Número Dpto</label>
+                                        <input type="number" class="form-control borde_input" name="num_depto"
+                                            placeholder="A111" id="num_depto">
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-md-6 col-sm-12" style="text-align: right;">
-                            <a href="#" class="texto_is" style="margin-bottom: 10px;">¿Olvidaste tu Contraseña?</a>
+                    </div>
+                    <div class="form-group">
+                        <div id="error" class="alert alert-danger"></div>
+                    </div>
+                    <div class="form-group">
+                        <div class="form-check">
+                            <label class="form-check-label texto_registro" for="check1"
+                                style="color: black; font-style: oblique;">
+                                <input type="checkbox" class="form-check-input texto_izq" id="check1" name="Rec"
+                                    value="something">He leído y acepto los <a href="#">términos y condiciones del
+                                    servicio</a>
+                            </label>
                         </div>
                     </div>
-                    <!--Boton Inicio Sesion-->
-                    <div class="form-group">
-                        <p><button type="submit" class="boton_is">Iniciar Sesión</button></p>
-                    </div>
-                    <div class="form-group">
+                    <div class="form-group" style="text-align: center;">
+
+                        <p><button type="submit" class="boton_is">Registrarse</button></p>
                         <p class="texto_is">———————————————— O ————————————————</p>
-                        <a href="Registrarse.html" class="texto_is " style="font-style: oblique;"> Crear Cuenta
+                        <a href="inicio_sesion.html" class="texto_is " style="font-style: oblique;"> Iniciar Sesión
                             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                                 class="bi bi-arrow-right" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd"
@@ -93,11 +213,10 @@
                     </div>
                 </form>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
