--- a/Quienes_somos.html
+++ b/Quienes_somos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>¿Quiénes somos?</title>
     <!--Boostrap4-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -18,7 +18,6 @@
     <link type="text/css" rel="stylesheet" href="Css/estilos.css">
     <!--Importe de los iconos para las redes sociales-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 
 </head>
 
@@ -37,10 +36,10 @@
         <div class="collapse navbar-collapse" id="navb">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link item_select" href="Home.html">Inicio</a>
+                    <a class="nav-link color_letra" href="Home.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link color_letra" href="Quienes_somos.html">¿Quiénes somos?</a>
+                    <a class="nav-link item_select" href="Quienes_somos.html">¿Quiénes somos?</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle color_letra" href="#" id="navbardrop" data-toggle="dropdown">
@@ -83,6 +82,46 @@
     </nav>
     <!--Fin Barra Menu-->
 
+    <!--Quienes somos info-->
+    <div class="container quienes_somos" style="margin-top: 50px;">
+        <div class="row">
+            <div class="col-md-3 centrado"
+                style="padding-right: 0; padding-left: 0; padding-top: 1%; padding-bottom: 2%; text-align: center;">
+                <img src="Imagenes/logo 2.png" alt="logo" width="250">
+            </div>
+            <div class="col-md-9">
+                <h2 style="text-align: center;"><u>Historia</u></h2>
+                <p style="text-align: justify; font-style: oblique;"> Nuestra tienda fue creada por Alex Gonzalez y
+                    Monserrat Caceres el
+                    19 de enero del año 2021. Empezando
+                    como una pyme con pocos recursos que durante el tiempo se fue expandiendo a diferentes tipos de
+                    ventas
+                    tales como poleras,polerones y articulos de epoca. Cajas sorpresa para el dia de los enamorados,
+                    huevitos de pascua y canastas de pascua para el dia de la pascua de resurreccion hasta ampliarse el
+                    camino a ventas por mayor y al detalle. en nuestra tienda podras encontrar todo tipo de diseños de
+                    ropa
+                    top quality a precio consumidor y a precio vendedor. trabajamos con las mejores prendas
+                    posibles,tela
+                    suave y elasticada, 100% algodon y estampado hecho con serigrafia.</p>
+            </div>
+        </div>
+    </div>
+
+    <!--Inicio Ubicación-->
+    <div class="container quienes_somos" style="margin-top: 50px; text-align: center;">
+        <div class="row">
+            <div>
+                <b style="font-size: 20px; font-family: 'Lato', sans-serif;">Encúentranos en nuestro local Rio Amazonas
+                    #3638, Conchalí</b> <br>
+                <iframe style="border: black solid 1px;"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.2274560458195!2d-70.66178308523853!3d-33.391229601860495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c6650f880d5b%3A0x8d720c40ff1c43d!2sR%C3%ADo%20Amazonas%203638%2C%20Conchal%C3%AD%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1620338301318!5m2!1ses-419!2scl"
+                    width="1000" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+        </div>
+    </div>
+    <!--Fin Ubicación-->
+    <!--Fin Quienes somos info-->
+
     <!--Inicio Pie de Página-->
     <footer class="bg-light text-center text-lg-start" style="margin-top: 50px;">
         <div class="container-fluid p-3">
@@ -108,7 +147,7 @@
                         </li>
                     </ul>
                 </div>
-                
+
                 <div class="col-md-4">
                     <h5 class="text-uppercase mb-0" style="padding-bottom: 10px;">Redes Sociales</h5>
 
@@ -131,10 +170,10 @@
                             <p>Correo Electrónico: a.gonzalez3@duocuc.cl</p>
                         </li>
                     </ul>
+                </div>
             </div>
         </div>
-        </div>
-    </footer>   
+    </footer>
     <!--Fin Pie de Página-->
 </body>
 
