--- a/Quienes_somos.html
+++ b/Quienes_somos.html
@@ -47,9 +47,12 @@
                     </a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="poleras.html">Poleras</a>
-                        <a class="dropdown-item" href="#">Pantalones</a>
+                        <a class="dropdown-item" href="Pantalones.html">Pantalones</a>
                         <a class="dropdown-item" href="polerones.html">Polerones</a>
                     </div>
+                    <li class="nav-item">
+                        <a class="nav-link color_letra" href="contactanos.html">Contáctanos</a>
+                    </li>
                 </li>
             </ul>
             <!--Registrarse / Iniciar Sesion-->
