--- a/polerones.html
+++ b/polerones.html
@@ -47,8 +47,11 @@
                     </a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="poleras.html">Poleras</a>
-                        <a class="dropdown-item" href="#">Pantalones</a>
+                        <a class="dropdown-item" href="Pantalones.html">Pantalones</a>
                     </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link color_letra" href="contactanos.html">Contáctanos</a>
                 </li>
             </ul>
             <!--Registrarse / Iniciar Sesion-->
@@ -99,8 +102,8 @@
                     <div class="card">
                         <img src="imagenes/poleron1.jpg" id="poleron1" alt="Poleron 1" style="width:100%" class="ajuste_fotos">
                         <h1>Poleron Calvin Klein</h1>
-                        <p class="price">$7.500</p>
-                        <p>Polera Top Quality con estampado a serigrafia y tela prelavada</p>
+                        <p class="price">$14.000</p>
+                        <p>Poleron Top Quality con estampado a serigrafia y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
                     </div>
                 </div>
@@ -110,8 +113,8 @@
                     <div class="card">
                         <img src="imagenes/poleron2.jpg" id="poleron2" alt="Poleron 2" style="width:100%" class="ajuste_fotos">
                         <h1>Poleron GAP</h1>
-                        <p class="price">$7.500</p>
-                        <p>Polera Top Quality con estampado a serigrafia y tela prelavada</p>
+                        <p class="price">$14.000</p>
+                        <p>Poleron Top Quality con bordado y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
                     </div>
                 </div>
@@ -121,8 +124,8 @@
                     <div class="card">
                         <img src="imagenes/poleron3.jpg" id="poleron3" alt="Poleron 3" style="width:100%" class="ajuste_fotos">
                         <h1>Poleron Guess</h1>
-                        <p class="price">$7.500</p>
-                        <p>Polera Top Quality con estampado a serigrafia y tela prelavada</p>
+                        <p class="price">$12.000</p>
+                        <p>Poleron Top Quality con estampado a serigrafia y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
                     </div>
                 </div>
@@ -134,8 +137,8 @@
                     <div class="card">
                         <img src="imagenes/poleron4.jpg" id="poleron4" alt="Poleron 4" style="width:100%" class="ajuste_fotos">
                         <h1>Poleron Tommy Hilfiger</h1>
-                        <p class="price">$7.500</p>
-                        <p>Polera Top Quality con estampado a serigrafia y tela prelavada</p>
+                        <p class="price">$14.000</p>
+                        <p>Poleron Top Quality con estampado a serigrafia y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
                     </div>
                 </div>
@@ -145,8 +148,8 @@
                     <div class="card">
                         <img src="imagenes/poleron5.jpg" id="poleron5" alt="Poleron 5" style="width:100%" class="ajuste_fotos">
                         <h1>Poleron Armani Exchange </h1>
-                        <p class="price">$7.500</p>
-                        <p>Polera Top Quality con estampado a serigrafia y tela prelavada</p>
+                        <p class="price">$14.000</p>
+                        <p>Poleron Top Quality con estampado a serigrafia y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
                     </div>
                 </div>
@@ -156,8 +159,8 @@
                     <div class="card">
                         <img src="imagenes/poleron6.jpg" id="poleron6" alt="Poleron 6" style="width:100%" class="ajuste_fotos">
                         <h1>Poleron Tommy Hilfiger</h1>
-                        <p class="price">$7.500</p>
-                        <p>Polera Top Quality con estampado a serigrafia y tela prelavada</p>
+                        <p class="price">$14.000</p>
+                        <p>Poleron Top Quality con estampado a serigrafia y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
                     </div>
                 </div>
@@ -169,8 +172,8 @@
                     <div class="card">
                         <img src="imagenes/poleron7.jpg" id="poleron7" alt="Poleron 7" style="width:100%" class="ajuste_fotos">
                         <h1>Poleron GAP</h1>
-                        <p class="price">$7.500</p>
-                        <p>Polera Top Quality con estampado a serigrafia y tela prelavada</p>
+                        <p class="price">$14.000</p>
+                        <p>Poleron Top Quality con bordado y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
                     </div>
                 </div>
@@ -180,8 +183,8 @@
                     <div class="card">
                         <img src="imagenes/poleron8.jpg" id="poleron8" alt="Poleron 8" style="width:100%" class="ajuste_fotos">
                         <h1>Poleron Guess</h1>
-                        <p class="price">$7.500</p>
-                        <p>Polera Top Quality con estampado a serigrafia y tela prelavada</p>
+                        <p class="price">$12.000</p>
+                        <p>Poleron Top Quality con estampado a serigrafia y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
                     </div>
                 </div>
@@ -191,8 +194,8 @@
                     <div class="card">
                         <img src="imagenes/poleron9.jpg" id="poleron9" alt="Poleron 9" style="width:100%" class="ajuste_fotos">
                         <h1>Poleron GAP</h1>
-                        <p class="price">$7.500</p>
-                        <p>Polera Top Quality con estampado a serigrafia y tela prelavada</p>
+                        <p class="price">$14.000</p>
+                        <p>Poleron Top Quality con bordado y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
                     </div>
                 </div>
