--- a/Pantalones.html
+++ b/Pantalones.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>Poleras</title>
     <!--Boostrap4-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -18,7 +18,6 @@
     <link type="text/css" rel="stylesheet" href="Css/estilos.css">
     <!--Importe de los iconos para las redes sociales-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 
 </head>
 
@@ -37,23 +36,22 @@
         <div class="collapse navbar-collapse" id="navb">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link item_select" href="Home.html">Inicio</a>
+                    <a class="nav-link color_letra" href="Home.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link color_letra" href="Quienes_somos.html">¿Quiénes somos?</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle color_letra" href="#" id="navbardrop" data-toggle="dropdown">
-                        Productos
+                    <a class="nav-link dropdown-toggle item_select" href="#" id="navbardrop" data-toggle="dropdown">
+                        Pantalones
                     </a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="poleras.html">Poleras</a>
-                        <a class="dropdown-item" href="Pantalones.html">Pantalones</a>
                         <a class="dropdown-item" href="polerones.html">Polerones</a>
                     </div>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link color_letra" href="contactanos.html">Contáctanos</a>
+                </li>
                 </li>
             </ul>
             <!--Registrarse / Iniciar Sesion-->
@@ -86,59 +84,15 @@
     </nav>
     <!--Fin Barra Menu-->
 
-    <!--Inicio Pie de Página-->
-    <footer class="bg-light text-center text-lg-start" style="margin-top: 50px;">
-        <div class="container-fluid p-3">
-            <div class="row">
-                <div class="col-md-4">
-                    <h5 class="text-uppercase">Horarios de Atención</h5>
-
-                    <ul class="list-unstyled mb-0" style="line-height: 1;">
-                        <li>
-                            <p class="text-dark">Lunes: 10:00 a 20:00</p>
-                        </li>
-                        <li>
-                            <p class="text-dark">Martes: 10:00 a 20:00</p>
-                        </li>
-                        <li>
-                            <p class="text-dark">Miércoles: 10:00 a 20:00</p>
-                        </li>
-                        <li>
-                            <p class="text-dark">Jueves: 10:00 a 20:00</p>
-                        </li>
-                        <li>
-                            <p class="text-dark">Viernes: 10:00 a 20:00</p>
-                        </li>
-                    </ul>
-                </div>
-                
-                <div class="col-md-4">
-                    <h5 class="text-uppercase mb-0" style="padding-bottom: 10px;">Redes Sociales</h5>
-
-                    <ul class="list-unstyled lados_pie_pag">
-                        <p>
-                            <a href="https://www.instagram.com/amon.store._/?hl=es" class="fa fa-instagram"></a>
-                            <a href="#" class="fa fa-facebook"></a>
-                        </p>
-                    </ul>
-                </div>
-
-                <div class="col-md-4">
-                    <h5 class="text-uppercase">Contáctanos</h5>
-
-                    <ul class="list-unstyled mb-0" style="line-height: 1;">
-                        <li>
-                            <p>Telefono: +56 9 4998 3478</p>
-                        </li>
-                        <li>
-                            <p>Correo Electrónico: a.gonzalez3@duocuc.cl</p>
-                        </li>
-                    </ul>
+    <div class="container" style="text-align: center; margin-top: 10%;">
+        <div class="row">
+            <div class="col-md-12" style="background-color: #fff; border: black solid 1px;">
+                <h1 style="padding-top: 30px;">:( Lo sentimos!</h1>
+                <h4 style="padding-bottom: 30px;">Este producto no esta disponible en estos momentos</h4>
             </div>
         </div>
-        </div>
-    </footer>   
-    <!--Fin Pie de Página-->
+    </div>
+
 </body>
 
 </html>
